[package]
name = "mytilus-errno"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "`__errno_location` and syscall return classification."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_errno"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
