[package]
name = "mytilus-internal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared no_std internals: locks, atomics, futex, intrusive lists."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_internal"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
