[package]
name = "mytilus-locale"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Locale, iconv, multibyte, message catalog."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_locale"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
# Other deps (mytilus-internal, mytilus-errno, mytilus-string, mytilus-malloc)
# will be added back when setlocale/iconv/etc. arrive. The Phase-1 ctype
# subset is pure data-table work and only needs c_int from mytilus-sys; the
# setlocale-uses-strcmp dep cycle (mytilus-string -> mytilus-locale ->
# mytilus-string) needs to be resolved before re-adding mytilus-string.
