[package]
name = "mytilus-mman"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "mmap/munmap/mprotect/madvise/mlock."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_mman"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-errno.path = "../mytilus-errno"
