[package]
name = "mytilus-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sockets, getaddrinfo, getnameinfo, resolver, DNS."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_net"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-internal.path = "../mytilus-internal"
mytilus-errno.path = "../mytilus-errno"
mytilus-string.path = "../mytilus-string"
mytilus-malloc.path = "../mytilus-malloc"
mytilus-fcntl.path = "../mytilus-fcntl"
mytilus-unistd.path = "../mytilus-unistd"
