[package]
name = "mytilus-passwd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "getpwnam, getgrnam, NSS-like file backends."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_passwd"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-internal.path = "../mytilus-internal"
mytilus-errno.path = "../mytilus-errno"
mytilus-string.path = "../mytilus-string"
mytilus-malloc.path = "../mytilus-malloc"
mytilus-fcntl.path = "../mytilus-fcntl"
mytilus-unistd.path = "../mytilus-unistd"
