[package]
name = "mytilus-prng"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "rand/random and the *rand48 family. Pure deterministic PRNGs."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_prng"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
