[package]
name = "mytilus-process"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "fork, vfork, posix_spawn, wait*, exec*."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_process"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-errno.path = "../mytilus-errno"
# mytilus-internal/thread/signal return when fork/posix_spawn/wait* arrive
# (they need the libc lock + Pthread struct + signal-mask save). Phase 1
# ports just trivial syscall wrappers and only needs `c_*` types from
# mytilus-sys plus errno's `__errno_location` for `ret()`.
