[package]
name = "mytilus-regex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "POSIX regex (TRE-like)."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_regex"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-string.path = "../mytilus-string"
mytilus-malloc.path = "../mytilus-malloc"
