[package]
name = "mytilus-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "sigaction, signal, sigset, signal-restore trampoline."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_signal"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-errno.path = "../mytilus-errno"
# mytilus-internal returns when sigaction/sigprocmask arrive (they need
# the libc lock + cancellation machinery). Phase 1 is pure sigset_t
# bit-twiddling and only needs c types from mytilus-sys + errno's
# __errno_location for sigaddset/sigdelset validation.
