[package]
name = "mytilus-startup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "crt1, crti, crtn, Scrt1, rcrt1 and __libc_start_main."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_startup"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
# mytilus-internal/mman/thread return when crt1/__libc_start_main lands.
# Phase 1 ports just setjmp.s + longjmp.s and only needs c_ulong/c_int
# from mytilus-sys.
