[package]
name = "mytilus-startup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "crt1, crti, crtn, Scrt1, rcrt1 and __libc_start_main."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_startup"

[features]
crt-artifacts = []

[[bin]]
name = "mytilus-crt1"
path = "crt/aarch64/crt1.rs"
required-features = ["crt-artifacts"]
test = false
bench = false

[[bin]]
name = "mytilus-Scrt1"
path = "crt/aarch64/Scrt1.rs"
required-features = ["crt-artifacts"]
test = false
bench = false

[[bin]]
name = "mytilus-rcrt1"
path = "crt/aarch64/rcrt1.rs"
required-features = ["crt-artifacts"]
test = false
bench = false

[[bin]]
name = "mytilus-crti"
path = "crt/aarch64/crti.rs"
required-features = ["crt-artifacts"]
test = false
bench = false

[[bin]]
name = "mytilus-crtn"
path = "crt/aarch64/crtn.rs"
required-features = ["crt-artifacts"]
test = false
bench = false


[dependencies]
mytilus-sys.path = "../mytilus-sys"
# mytilus-internal/mman/thread return when crt1/__libc_start_main lands.
# Phase 1 ports just setjmp.s + longjmp.s and only needs c_ulong/c_int
# from mytilus-sys.
