[package]
name = "mytilus-stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "FILE, buffered I/O, printf/scanf families."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_stdio"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-internal.path = "../mytilus-internal"
mytilus-errno.path = "../mytilus-errno"
mytilus-string.path = "../mytilus-string"
mytilus-malloc.path = "../mytilus-malloc"
mytilus-unistd.path = "../mytilus-unistd"
mytilus-fcntl.path = "../mytilus-fcntl"
