[package]
name = "mytilus-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "qsort, bsearch, strtol family, env, exit, atexit."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_stdlib"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-internal.path = "../mytilus-internal"
mytilus-errno.path = "../mytilus-errno"
mytilus-string.path = "../mytilus-string"
mytilus-malloc.path = "../mytilus-malloc"
