[package]
name = "mytilus-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "qsort, bsearch, strtol family, env, exit, atexit."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_stdlib"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
# Other deps (mytilus-internal, mytilus-errno, mytilus-string, mytilus-malloc)
# return when the strtol family / env / exit / atexit lands. Phase 1 ports
# only the allocation-free integer + sort/search subset and needs only the
# c types from mytilus-sys.
