[package]
name = "mytilus-string"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Implementations of mem*/str*/wmem*/wcs*. Perf-critical hot path."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_string"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-errno.path = "../mytilus-errno"
