[package]
name = "mytilus-time"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Clock, time, mktime, strftime, TZif parser."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_time"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-errno.path = "../mytilus-errno"
# Other deps (mytilus-internal, mytilus-malloc, mytilus-fcntl, mytilus-unistd)
# return when mktime/strftime/TZif arrives. Phase 1 ports just the syscall
# wrappers and needs only the c types from mytilus-sys plus errno's
# __errno_location for `ret()`.
