[package]
name = "mytilus-unistd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "read/write/lseek/dup/pipe and friends."
publish = false

[lints]
workspace = true

[lib]
name = "mytilus_unistd"


[dependencies]
mytilus-sys.path = "../mytilus-sys"
mytilus-errno.path = "../mytilus-errno"
# First **cross-crate-symbol** dep: `sleep`/`usleep` upstream call
# `nanosleep`, which now lives in mytilus-time.
mytilus-time.path = "../mytilus-time"
